--- a/style.css
+++ b/style.css
@@ -76,3 +76,49 @@ p {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+img:hover {
+    transform: scale(1.04);
+    filter: brightness(200%);
+    filter: drop-shadow(.1em .3em .3em #FFFFFF);
+}
+img {
+    transition: transform .2s, black .2s;
+}
+
+a {
+  background-image: linear-gradient(
+    to right,
+    #ffbf80,
+    #ffbf80 50%,
+    #ffbf80 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  display: inline-block;
+  padding: 5px 0;
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+a:before{
+  content: '';
+  background: #ffbf80;
+  display: block;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+ background-position: 0;
+}
+
+a:hover::before{
+  width: 100%;
+}
+
